# bitwarden.wez

./: .gitignore  LICENSE  README.md  SECURITY.md  renovate.json
.githooks/: pre-commit
.github/: CODEOWNERS
.github/workflows/: ci.yml  codeql.yml  release.yml  scorecard.yml
docs/: biometric-unlock-status.md  browser-ipc-migration-plan.md  setup-macos.md
helper/: Cargo.toml
helper/src/: agent.rs  crypto.rs  lib.rs  main.rs  protocol.rs  totp.rs  transport.rs  vault.rs
helper/src/transport/: mod.rs  native_messaging.rs  socket.rs
helper/tests/: socket_integration.rs
mock/: bw-wez
plugin/: init.lua
