[package]
name = "bw-wez"
version = "0.1.0"
edition = "2021"
description = "Native-messaging bridge between WezTerm (bitwarden.wez plugin) and the Bitwarden desktop app for biometric unlock + vault reads"
license = "MIT"
repository = "https://github.com/usrivastava92/bitwarden.wez"

[[bin]]
name = "bw-wez"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
base64 = "0.22"
rand = "0.10"
uuid = { version = "1", features = ["v4"] }

# crypto for the native-messaging handshake (RSA-OAEP transport key) and the
# Bitwarden EncString format (AES-256-CBC + HMAC-SHA256).
rsa = { version = "0.9", features = ["sha1"] }
sha1 = "0.11"
sha2 = "0.11"
hmac = "0.13"
aes = "0.9"
cbc = { version = "0.2", features = ["std"] }

# home dir / socket path resolution
dirs = "5"

# mlock the in-memory key in the agent (best-effort, keeps it out of swap)
libc = "0.2"

[dev-dependencies]
serde_json = "1"
anyhow = "1"
base64 = "0.22"
rand = "0.10"
rsa = { version = "0.9", features = ["sha1"] }
sha1 = "0.11"
sha2 = "0.11"
hmac = "0.13"
aes = "0.9"
cbc = { version = "0.2", features = ["std"] }
libc = "0.2"

[profile.release]
strip = true
lto = true
opt-level = "z"
