[package]
name = "bw-wez"
version = "0.1.0"
edition = "2021"
description = "Native-messaging bridge between WezTerm (bitwarden.wez plugin) and the Bitwarden desktop app for biometric unlock + vault reads"
license = "MIT"
repository = "https://github.com/usrivastava92/bitwarden.wez"

[[bin]]
name = "bw-wez"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
base64 = "0.22"
rand = "0.8"
uuid = { version = "1", features = ["v4"] }

# crypto for the native-messaging handshake (RSA-OAEP transport key) and the
# Bitwarden EncString format (AES-256-CBC + HMAC-SHA256).
rsa = { version = "0.9", features = ["sha1"] }
# sha1/sha2/hmac stay at 0.10/0.12 to match rsa 0.9's digest 0.10 dependency.
sha1 = "0.10"
sha2 = "0.10"
hmac = "0.12"
aes = "0.9"
# NOTE: cbc 0.2 dropped the "std" feature that existed in 0.1; "alloc" replaces
# it and is needed for the heap-allocated encrypt/decrypt_vec APIs.
cbc = { version = "0.2", features = ["alloc"] }

# home dir / socket path resolution
dirs = "6"

# mlock the in-memory key in the agent (best-effort, keeps it out of swap)
libc = "0.2"

[dev-dependencies]
serde_json = "1"
anyhow = "1"
base64 = "0.22"
rand = "0.8"
rsa = { version = "0.9", features = ["sha1"] }
sha1 = "0.10"
sha2 = "0.10"
hmac = "0.12"
aes = "0.9"
cbc = { version = "0.2", features = ["alloc"] }
libc = "0.2"

[profile.release]
strip = true
lto = true
opt-level = "z"
